# hf_model

./: .env.example  .gitignore  Makefile  pyproject.toml
hf_model/: __main__.py  guidance.ipynb  outlines.py  transformers.py
